k8s/30-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ens
spec:
  selector: { app: postgres }
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: ens
  labels: { app: postgres }
spec:
  replicas: 1
  selector: { matchLabels: { app: postgres } }
  template:
    metadata:
      labels: { app: postgres }
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports: [ { containerPort: 5432 } ]
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pgdata
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: ens
spec:
  selector: { app: pgadmin }
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: ens
  labels: { app: pgadmin }
spec:
  replicas: 1
  selector: { matchLabels: { app: pgadmin } }
  template:
    metadata:
      labels: { app: pgadmin }
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports: [ { containerPort: 80 } ]
