k8s/40-kafka.yaml
# Zookeeper
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: ens
spec:
  selector: { app: zookeeper }
  ports:
    - port: 2181
      targetPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: ens
  labels: { app: zookeeper }
spec:
  replicas: 1
  selector: { matchLabels: { app: zookeeper } }
  template:
    metadata:
      labels: { app: zookeeper }
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.3.2
          ports: [ { containerPort: 2181 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: ens
spec:
  selector: { app: kafka }
  ports:
    - name: broker
      port: 9092
      targetPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: ens
  labels: { app: kafka }
spec:
  replicas: 1
  selector: { matchLabels: { app: kafka } }
  template:
    metadata:
      labels: { app: kafka }
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.3.2
          ports: [ { containerPort: 9092 } ]
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: kafka-data

# Kafka UI
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: ens
spec:
  selector: { app: kafka-ui }
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: ens
  labels: { app: kafka-ui }
spec:
  replicas: 1
  selector: { matchLabels: { app: kafka-ui } }
  template:
    metadata:
      labels: { app: kafka-ui }
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:v0.7.1
          ports: [ { containerPort: 8080 } ]
